# sms-firewall

./: .gitignore  README.md  makefile  pyproject.toml
project/: __init__.py  config.py
project/apis/: __init__.py
project/apis/OTP/: crud.py  handlers.py  models.py  utils.py  views.py
project/apis/blockednumbers/: crud.py  handlers.py  models.py  views.py
project/apis/destNumSeries/: crud.py  handlers.py  models.py  views.py
project/apis/keywords/: crud.py  handlers.py  models.py  views.py
project/apis/runtimelogics/: crud.py  handlers.py  models.py  utils.py  views.py
project/apis/validatesms/: handlers.py  models.py  utils.py  views.py
project/apis/whitelistednumbers/: crud.py  handlers.py  models.py  views.py
project/utilities/: autentication.py
