[tool.poetry]
name = "sms-firewall"
version = "0.1.0"
description = "Novocom sms firewall."
authors = ["Arafin Ahmed <arafin2021@gmail.com>"]
readme = "README.md"
license = "Proprietary"
packages = [
    { include = "project" }
]

[tool.poetry.dependencies]
python = "^3.10"
werkzeug="2.1.2"
Flask = "^2.0.2"
flask-restx = "^0.5.1"
Flask-Cors = "^3.0.10"
psycopg2-binary = "^2.9.2"
gunicorn = "^20.1.0"
Flask-PyMongo = "^2.3.0"
PyJWT = "^2.4.0"
watchfiles = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
tox = "^3.24.4"
bandit = "^1.7.1"
safety = "^2.1.1"
pre-commit = "^2.20.0"
pep8-naming = "^0.13.2"
flake8-bugbear = "^22.8.23"
dlint = "^0.13.0"
flake8-builtins = "^1.5.3"

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
